# CAQES

./: .dockerignore  .gitconfig  .gitignore  Dockerfile  README.md  caqes.conf.template  pyproject.toml  requirements.txt
.devcontainer/: caqes-core.Dockerfile  devcontainer.json  docker-compose.yml  syslog-ng.Dockerfile
.devcontainer/config/mosquitto/: mosquitto.conf
.devcontainer/config/syslog-ng/: generate_snort_logs.sh  syslog-ng.conf
config/: nats-server.conf  syslog-ng.conf
src/alerts/: alert.py  alert_listener.py  alert_parser.py  worker.py
src/caqes_core/: app.py  quarantine_orchestrator.py  standard_quarantine_orchestrator.py  worker.py
src/caqes_core/loggers/: audit_logger.py
src/caqes_core/models/: __init__.py  alert.py
src/caqes_core/mq/: __init__.py  client.py  client_factory.py  client_type.py  message.py  mqtt_client.py  mqtt_message.py
src/caqes_core/policies/: __init__.py  policy_evaluator.py
src/caqes_core/quarantine/: network_integration.py  protocol_integration.py  quarantine_orchestrator.py
src/caqes_core/settings/: config.py  (+1 more)
src/config/: configuration_manager.py  settings.py
src/loggers/: audit_logger.py
src/logging/: audit_logger.py
src/models/: __init__.py  alert.py  alert_job.py  job.py  policy.py
src/mq/: client_factory.py  client_types.py  message.py  mq_client.py  mqtt_client.py
src/policies/: __init__.py  policy_engine.py  policy_evaluator.py
src/quarantine/: __init__.py  integration_factory.py  quarantine_orchestrator.py
src/settings/: __init__.py  caqes_settings.py  config.py  mq_settings.py  orchestrator_settings.py  worker_settings.py
src/worker/: worker.py
tests/: nats_listener_test.py  nats_publish_test.py
tests/alerts/: test_alert_listener.py  test_alert_parser.py
tests/caqes_core/: test_worker.py
tests/mq/: test_mqtt_client.py
tests/quarantine/: test_emqx_quarantine.py
utils/: build-qcow2.sh  docker-compose.yml
(+14 files in other folders)
