[project]
name = "caqes-core"
version = "0.1.0"
description = ""
authors = [
    {name = "ADHL",email = "hanlim2002@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[tool.poetry]
packages = [{include = "caqes_core", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
