[project]
name = "caqes-core"
version = "0.1.0"
description = ""
authors = [
    {name = "ADHL",email = "hanlim2002@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic (>=2.10.6,<3.0.0)",
    "pydantic-settings (>=2.8.1,<3.0.0)",
    "paho-mqtt (>=2.1.0,<3.0.0)",
]

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"

[tool.poetry]
packages = [{include = "caqes_core", from = "src"}]

[tool.poetry.scripts]
start = "caqes_core.app:main"

[tool.poetry.group.test.dependencies]
pytest-asyncio = "^0.25.3"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.1.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
